Terminei de estilizar
Terminei de estilizar a calculadora e adicionei o mesmo ícone que usei no cálculo do volume.

--- a/02/index.html
+++ b/02/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="calculator.png">
 </head>
 <body>
     <main>
@@ -29,7 +30,7 @@
                 <button class="operacao" onclick="calculadora.adicionarOperacao('-')">-</button>
         
                 <button class="numero" onclick="calculadora.adicionarNumero('0')">0</button>
-                <button class="operacao" onclick="calculadora.limpar()">C</button>
+                <button class="limpar" onclick="calculadora.limpar()">C</button>
                 <button class="operacao" onclick="calculadora.adicionarOperacao('+')">+</button>
                 <button class="operacao" onclick="calculadora.resultado()">=</button>
     
